--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style type="text/css"></style>
+    <title> AlgorithmWiki </title>
+    <link rel=“stylesheet” href=“style.css”>
   </head>
   <body>
     <div> 
