--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div> 
       <header> 
         <h1> AlgorithmWiki</h1>
-        <h2> the encyclopedia of algorithms and repository of implementations </h2>
+        <h2> the encyclopedia of algorithm implementation </h2>
         <span>
           <a href="https://www.github.com/blueridanus/algorithmwiki"> github</a> 
         </span>
